src/client/components/md_modal/md_modal.less
/*
 * pwix:modal/src/client/components/md_modal/md_modal.less
 */

@import "{pwix:ui-layout}/exports/stylesheets.less";

.md-modal {

    --md-modal-margin: 0.25em;
    --md-modal-padding: 0.25em;
    --md-modal-top: 2em;
    --md-modal-shift: 0.25em;

    @media screen and ( min-width: @ui-md-width ){
        --md-modal-margin: 0.5em;
        --md-modal-padding: 0.5em;
        --md-modal-top: 4rem;
        --md-modal-shift: 1em;
    }

    .modal-dialog {
        margin: var( --md-modal-margin );
    }

    .modal-content {
        top: var( --md-modal-top );
        max-height: 99vh;
    }

    .modal-content.ui-resizable {
        overflow: hidden;
    }

    // added to have a vertical scrollbar in cookieManager
    .modal-body {
        overflow-y: auto;
    }

    // this class to allow the javascript to get our values
    .md-hidden {
        display: none;
        margin: var( --md-modal-margin );
        top: var( --md-modal-top );
        left: var( --md-modal-shift );
        padding: var( --md-modal-padding );
    }

    // define a special xxl size for wide screens
    @media screen and ( min-width: @ui-xs-width ){
        .modal .modal-dialog.modal-xxl {
            --bs-modal-width: 280px;
        }
    }
    @media screen and ( min-width: @ui-sm-width ){
        .modal .modal-dialog.modal-xxl {
            --bs-modal-width: 330px;
        }
    }
    @media screen and ( min-width: @ui-md-width ){
        .modal .modal-dialog.modal-xxl {
            --bs-modal-width: 700px;
        }
    }
    @media screen and ( min-width: @ui-lg-width ){
        .modal .modal-dialog.modal-xxl {
            --bs-modal-width: 920px;
        }
    }
    @media screen and ( min-width: 1500px ){
        .modal .modal-dialog.modal-xxl {
            --bs-modal-width: 1350px;
        }
    }
    @media screen and ( min-width: @ui-xl-width ){
        .modal .modal-dialog.modal-xxl {
            --bs-modal-width: 1750px;
        }
    }
}

